Fixed issue #10817: Testing 2.50 default template on mobile devices
Padding in file-upload pop-up.

--- a/styles-public/uploader.css
+++ b/styles-public/uploader.css
@@ -118,5 +118,5 @@ text-align:left;
 }
 
 body.uploader {
-    padding-top: 2em;
+    padding: 1em;
 }
